스퐅티파이 내부 라이브러리로 수정중